VSE: Inconsistency in Mask strip color #90412

Closed
opened 2021-08-03 16:30:30 +02:00 by tintwotin · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8

Short description of error
In this patch D6883 the default color of mask strips wasn't aligned to the value of mask strip in the light theme. This means that the documentation referencing the strips colors will be wrong when using the light theme.

The default color of the mask strip is grey. This is problematic since all strips are designed to have non-grey colors, since the greys are reserved the UI and sequencer background.
{F10226434,size=full}

The light theme in D6883:
{F10229404,size=full}

The default in D6883:
{F10229405,size=full}

Abandoned attempt to fix this: D11953

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` **Short description of error** In this patch [D6883](https://archive.blender.org/developer/D6883) the default color of mask strips wasn't aligned to the value of mask strip in the light theme. This means that the documentation referencing the strips colors will be wrong when using the light theme. The default color of the mask strip is grey. This is problematic since all strips are designed to have non-grey colors, since the greys are reserved the UI and sequencer background. {[F10226434](https://archive.blender.org/developer/F10226434/image.png),size=full} The light theme in [D6883](https://archive.blender.org/developer/D6883): {[F10229404](https://archive.blender.org/developer/F10229404/image.png),size=full} The default in [D6883](https://archive.blender.org/developer/D6883): {[F10229405](https://archive.blender.org/developer/F10229405/image.png),size=full} Abandoned attempt to fix this: [D11953](https://archive.blender.org/developer/D11953)
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
Member

Added subscribers: @iss, @lichtwerk

Added subscribers: @iss, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

If I read the intentions of D6883 right, then this was indeed a mistake in the original patch.
Not sure why you abandoned D11953 (since only the versioning was missing?).

@iss: will let you decide (but looks like this is going against the original intends...)

If I read the intentions of [D6883](https://archive.blender.org/developer/D6883) right, then this was indeed a mistake in the original patch. Not sure why you abandoned [D11953](https://archive.blender.org/developer/D11953) (since only the versioning was missing?). @iss: will let you decide (but looks like this is going against the original intends...)
Author

@lichtwerk Imo, there was uncertainty concerning the solution I proposed. I do not want to waste time on having patches open due to indecisive processing. So the difference, for me, is that the solution of a patch I submitted is my problem, whereas the solution of a bug report is not my problem.

@lichtwerk Imo, there was uncertainty concerning the solution I proposed. I do not want to waste time on having patches open due to indecisive processing. So the difference, for me, is that the solution of a patch I submitted is my problem, whereas the solution of a bug report is not my problem.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Yes this indeed looks like a mistake, I missed the point that in light theme this color is already different.

Yes this indeed looks like a mistake, I missed the point that in light theme this color is already different.
Author

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Author

As I do not have anymore time or motivation for a continued investment in the Blender project, I'm giving up on this report for now.

As I do not have anymore time or motivation for a continued investment in the Blender project, I'm giving up on this report for now.
Member

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'
Member

Sorry to hear (thx again reporting). In my opinion we should not sweep this under the carpet (esp. since this already been confirmed), there is still a chance to get this fixed in the future and others might be affected by this issue as well.
Feel free to unsubscribe though.

Sorry to hear (thx again reporting). In my opinion we should not sweep this under the carpet (esp. since this already been confirmed), there is still a chance to get this fixed in the future and others might be affected by this issue as well. Feel free to unsubscribe though.
Author

Removed subscriber: @tintwotin

Removed subscriber: @tintwotin

This issue was referenced by 61bffa565e

This issue was referenced by 61bffa565ec2b43b6131f6e459b7c07970b8a5db

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-11-17 03:30:34 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#90412
No description provided.