Fix T90412: Inconsistency in mask strip color

This seems to be oversight in 271231f58ee3 where strip color was
defined only for light theme.